Main element and start of Album element

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,12 +8,9 @@
 </head>
 
 <body>
-    <!-- <header>
-        <h1>Jukebox Hero</h1>
-    </header> -->
 
     <div class="container">
-        <div class="album">
+        <!-- <div class="album">
             <img src="http://placekitten.com/200/300">
             <h2>artistName</h2>
             <h3>title</h3>
@@ -35,7 +32,7 @@
             <h3>title</h3>
             <h4>recordLabel</h4>  
 
-        </div>
+        </div> -->
     </div>
 
     <footer>
@@ -43,8 +40,6 @@
         <p>Ilyana Productions</p>
     </footer>
 
-    <script src="./javascript/app.js" type="module"></script>  
+<script src="./javascript/app.js" type="module"></script>  
 </body>
 </html> 
-</body>
-</html>
