--- a/front-end/html prototypes/index-prototype.html
+++ b/front-end/html prototypes/index-prototype.html
@@ -12,7 +12,7 @@
         <h1>Jukebox Hero</h1>
     </header>
 
-    <div main class="main">
+    <main class="main-content">
         <div class="album">
             <img src="http://placekitten.com/200/300">
             <h2>artistName</h2>
@@ -36,7 +36,7 @@
             <h4>recordLabel</h4>  
 
         </div>
-    </div>
+    </main>
 
     <footer>
         <p>Copyright 2021</p>
